opam-version: "2.0"
depends: [
  "dune" {build >= "1.2.0"}
  "accessor"
  "accessor_async"
  "accessor_base"
  "accessor_core"
  "async"
  "async_durable"
  "async_extra"
  "async_find"
  "async_inotify"
  "async_interactive"
  "async_js"
  "async_kernel"
  "async_rpc_kernel"
  "async_sendfile"
  "async_shell"
  "async_smtp"
  "async_ssl"
  "async_udp"
  "async_unix"
  "async_websocket"
  "base"
  "base_bigstring"
  "base_quickcheck"
  "bignum"
  "bin_prot"
  "bonsai"
  "command_rpc"
  "core"
  "core_bench"
  "core_extended"
  "core_kernel"
  "core_profiler"
  "csvfields"
  "delimited_parsing"
  "ecaml"
  "email_message"
  "expect_test_helpers_async"
  "expect_test_helpers_core"
  "fieldslib"
  "hardcaml"
  "hardcaml_waveterm"
  "higher_kinded"
  "incr_dom"
  "incr_dom_interactive"
  "incr_dom_keyboard"
  "incr_dom_partial_render"
  "incr_dom_sexp_form"
  "incremental"
  "incr_map"
  "incr_select"
  "jane-street-headers"
  "jst-config"
  "line-up-words"
  "mlt_parser"
  "netsnmp"
  "notty_async"
  "ocaml_plugin"
  "pam"
  "parsexp"
  "parsexp_io"
  "patdiff"
  "patience_diff"
  "posixat"
  "postgres_async"
  "ppx_accessor"
  "ppx_assert"
  "ppx_base"
  "ppx_bench"
  "ppx_bin_prot"
  "ppx_cold"
  "ppx_compare"
  "ppx_conv_func"
  "ppx_csv_conv"
  "ppx_custom_printf"
  "ppx_deriving_hardcaml"
  "ppx_disable_unused_warnings"
  "ppx_enumerate"
  "ppx_expect"
  "ppx_fields_conv"
  "ppx_fixed_literal"
  "ppx_hash"
  "ppx_here"
  "ppx_inline_test"
  "ppx_jane"
  "ppx_js_style"
  "ppx_let"
  "ppx_log"
  "ppx_module_timer"
  "ppx_optcomp"
  "ppx_optional"
  "ppx_pattern_bind"
  "ppx_pipebang"
  "ppx_python"
  "ppx_sexp_conv"
  "ppx_sexp_message"
  "ppx_sexp_value"
  "ppx_stable"
  "ppx_string"
  "ppx_typerep_conv"
  "ppx_variants_conv"
  "ppx_xml_conv"
  "ppx_yojson_conv"
  "ppx_yojson_conv_lib"
  "protocol_version_header"
  "pythonlib"
  "re2"
  "re2_stable"
  "record_builder"
  "resource_cache"
  "rpc_parallel"
  "sequencer_table"
  "sexp"
  "sexp_diff_kernel"
  "sexplib"
  "sexplib0"
  "sexp_macro"
  "sexp_pretty"
  "sexp_select"
  "shell"
  "shexp"
  "splay_tree"
  "splittable_random"
  "stdio"
  "string_dict"
  "textutils"
  "textutils_kernel"
  "time_now"
  "timezone"
  "toplevel_backend"
  "toplevel_expect_test"
  "topological_sort"
  "typerep"
  "variantslib"
  "vcaml"
  "virtual_dom"
  "zarith_stubs_js"
  "zstandard"
]
