opam-version: "2.0"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/expect_test_helpers_async"
bug-reports: "https://github.com/janestreet/expect_test_helpers_async/issues"
dev-repo: "git+https://github.com/janestreet/expect_test_helpers_async.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/expect_test_helpers_async/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.08.0"}
  "async"
  "core"
  "expect_test_helpers_core"
  "ppx_jane"
  "sexp_pretty"
  "dune"                     {>= "2.0.0"}
]
synopsis: "Async helpers for writing expectation tests"
description: "
This library provides helper functions for writing expect tests.

Note that this library uses Async, for helpers that don't use Async,
look at expect_test_helpers_core.
"
