opam-version: "2.0"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/expect_test_helpers_core"
bug-reports: "https://github.com/janestreet/expect_test_helpers_core/issues"
dev-repo: "git+https://github.com/janestreet/expect_test_helpers_core.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/expect_test_helpers_core/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.08.0"}
  "base"
  "base_quickcheck"
  "core_kernel"
  "ppx_jane"
  "sexp_pretty"
  "stdio"
  "dune"            {>= "2.0.0"}
  "re"              {>= "1.8.0"}
]
synopsis: "Helpers for writing expectation tests"
description: "
This library provides helper functions for writing expect tests.

If you want helpers for writing expect tests using the Async library,
look at expect_test_helpers_async.
"
