opam-version: "2.0"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/incr_dom_interactive"
bug-reports: "https://github.com/janestreet/incr_dom_interactive/issues"
dev-repo: "git+https://github.com/janestreet/incr_dom_interactive.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/incr_dom_interactive/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.08.0"}
  "async_js"
  "async_kernel"
  "incr_dom"
  "incr_map"
  "incr_select"
  "incremental"
  "ppx_jane"
  "splay_tree"
  "virtual_dom"
  "dune"            {>= "2.0.0"}
  "js_of_ocaml"     {>= "3.4.1"}
  "js_of_ocaml-ppx"
]
synopsis: "A monad for composing chains of interactive UI elements"
description: "
This library allows your program to receive input from the user using DOM elements such as checkboxes, text fields, and buttons. It allows you to inspect the user's input and decide afterwards what the rest of the [Interactive.t] should be. This library is intended to be used in conjunction with Incr_dom.
"
