opam-version: "2.0"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/incr_dom_sexp_form"
bug-reports: "https://github.com/janestreet/incr_dom_sexp_form/issues"
dev-repo: "git+https://github.com/janestreet/incr_dom_sexp_form.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/incr_dom_sexp_form/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.08.0"}
  "incr_dom"
  "incr_dom_interactive"
  "incr_map"
  "incr_select"
  "incremental"
  "ppx_jane"
  "splay_tree"
  "virtual_dom"
  "dune"                 {>= "2.0.0"}
  "js_of_ocaml"          {>= "3.4.1"}
  "js_of_ocaml-ppx"
]
synopsis: "A library for building forms that allow the user to edit complicated types"
description: "
It relies on the fact that the type of the value being edited can be serialized via sexps.
"
