(library (name email_message) (public_name email_message)
 (flags :standard -w -49)
 (libraries async base64 base64.rfc2045 core.bigstring_unix core cryptokit
  email_address magic-mime re2 core.uuid)
 (preprocess (pps ppx_jane)))

(ocamllex email_lexer media_type_lexer quoted_printable_lexer)

(ocamlyacc email_grammar media_type_grammar)